@@ -11,6 +11,8 @@ mm_min_matches = 200
 mm_min_matches_preference = 1.0
 
 # [SHOW]
+show_output = "table" # format of the output, allowd values: table, csv, json; you can override this via --output
+
 show_progress = true # is progress bar visible during ranking recalculation
 
 show_colors = true 
